--- a/VBWEB/frontend/src/pages/SearchVenueListPage.css
+++ b/VBWEB/frontend/src/pages/SearchVenueListPage.css
@@ -43,7 +43,7 @@
 .svl-header-row .svl-col {
   flex: 1;
   text-align: left;
-  padding-right: 10px;
+  padding: 0 15px; /* Increased padding adds extra gap */
   border-right: 1px solid #ddd;
 }
 
@@ -77,7 +77,7 @@
 .svl-venue-row .svl-col {
   flex: 1;
   text-align: left;
-  padding-right: 10px;
+  padding: 0 15px;  /* Increased padding adds extra gap */
   border-right: 1px solid #eee;
 }
 
