--- a/VBWEB/frontend/src/pages/VenueApplication.css
+++ b/VBWEB/frontend/src/pages/VenueApplication.css
@@ -52,8 +52,8 @@
 }
 
 .preview-image {
-  width: 200px;
-  height: 150px;
+  width: 90%;
+  height: 90%;
   margin-top: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
