refactor: change instruction to chinese and add title to landing page

--- a/VBWEB/frontend/src/pages/LandingPage.css
+++ b/VBWEB/frontend/src/pages/LandingPage.css
@@ -13,6 +13,12 @@
   flex: 1;
 }
 
+.landing-page-title {
+	display: flex;
+	justify-content: center;
+	margin: 2vh;
+}
+
 /* Header */
 .landing-header {
   display: flex;
