--- a/VBWEB/frontend/src/index.css
+++ b/VBWEB/frontend/src/index.css
@@ -40,7 +40,7 @@
   padding-top: 5rem;
   width: 100vw;
   min-height: 100vh;
-  background: linear-gradient(to bottom right, #e3f2fd, #fce4ec);
+  /*background: linear-gradient(to bottom right, #e3f2fd, #fce4ec);*/
 }
 
 /* Base Elements */
@@ -52,7 +52,7 @@ body {
   min-height: 100vh;
   height: auto;
   font-family: 'Inter', sans-serif;
-  background-color: var(--color-bg);
+  /*background-color: var(--color-bg);*/
   color: var(--color-text);
   line-height: 1.6;
 }
