--- a/VBWEB/frontend/src/components/Header.css
+++ b/VBWEB/frontend/src/components/Header.css
@@ -4,8 +4,8 @@
   align-items: center;
   padding: 1rem 2rem;
   border-bottom: 1px solid #ddf0fc;
-  background: #ddf0fc;
-  height: 5rem;
+  background: #aed6f1;
+  height: 4.5rem;
 }
 
 .header .logo a {
