--- a/VBWEB/frontend/src/index.css
+++ b/VBWEB/frontend/src/index.css
@@ -51,7 +51,9 @@ body {
   padding: 0;
   min-height: 100vh;
   height: auto;
-  font-family: 'Inter', sans-serif;
+  font-family: "LXGW WenKai Mono TC", sans-serif;
+  font-weight: 700;
+  font-style: normal;
   /*background-color: var(--color-bg);*/
   color: var(--color-text);
   line-height: 1.6;
