feat: search-venue page done

--- a/VBWEB/frontend/src/index.css
+++ b/VBWEB/frontend/src/index.css
@@ -79,6 +79,7 @@ h1 {
 }
 
 /* Buttons */
+a,
 button {
   border-radius: var(--radius-md);
   border: 1px solid transparent;
@@ -91,6 +92,7 @@ button {
   transition: border-color 0.25s;
 }
 
+a:hover,
 button:hover {
   border-color: #cccccc;
 }
