--- a/VBWEB/frontend/src/index.css
+++ b/VBWEB/frontend/src/index.css
@@ -51,7 +51,7 @@ body {
   padding: 0;
   min-height: 100vh;
   height: auto;
-  font-family: "LXGW WenKai Mono TC", sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
   font-style: normal;
   /*background-color: var(--color-bg);*/
