refactor: CustomReservationPage css done, also fix the select issue for triggering send

--- a/VBWEB/frontend/src/feature/search-join/AvailableReservationsPage.css
+++ b/VBWEB/frontend/src/feature/search-join/AvailableReservationsPage.css
@@ -54,11 +54,11 @@
 }
 
 .btn-rejected {
-  background-color: var(--color-error, #e53e3e); /* optional fallback */
+  background-color: var(--color-error)
 }
 
 .full {
-  color: var(--color-error, #e53e3e);
+  color: var(--color-error);
   font-weight: bold;
 }
 
