--- a/VBWEB/frontend/src/feature/manage-court/CourtsDashboard.css
+++ b/VBWEB/frontend/src/feature/manage-court/CourtsDashboard.css
@@ -48,14 +48,11 @@
     font-weight: 500;
   }
   
-  .btn-manage {
-    background-color: var(--color-primary);
-    color: var(--color-surface);
-    padding: var(--spacing-sm) var(--spacing-md);
+  .button-ops {
     margin-right: var(--spacing-sm);
   }
 
-  .btn-delete {
+  .button-ops-delete {
     background-color: var(--color-fourth);
     color: var(--color-surface);
     padding: var(--spacing-sm) var(--spacing-md);
