refactor: add margin

--- a/VBWEB/frontend/src/feature/search-join/SearchVenueListPage.css
+++ b/VBWEB/frontend/src/feature/search-join/SearchVenueListPage.css
@@ -123,6 +123,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: var(--spacing-sm);
 }
 
 .svl-court-info {
